--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Tarankevich-Diplom</title>
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="/bundle.js"></script>
   </body>
 </html>
